--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite --open",
     "lint": "eslint ./src",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview --port 8080"
   },
   "keywords": [],
   "author": "",
